# SimpleSocialNetworkBack/SimpleSocialNetworkBack/Controllers/OpMessageController.cs
@@ -3,8 +3,8 @@ using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
 using Business.Models;
-using Business.Models.Answers;
 using Business.Models.Requests;
+using Business.Models.Responses;
 using Business.Services;
 using Business.Validation;
 using Microsoft.AspNetCore.Authorization;
@@ -31,14 +31,29 @@ namespace SimpleSocialNetworkBack.Controllers
         [Authorize]
         [ProducesResponseType(StatusCodes.Status200OK)]
         [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        public async Task<ActionResult<OpMessageModel>> CreateOpMessage([FromBody] CreateOpMessageModel opMessage)
+        public async Task<ActionResult<int>> CreateOpMessage([FromBody] CreateOpMessageModel opMessage)
         {
             var username = User.Identity.Name!;
             try
             {
-                var user = await _userService.Get(username);
-                var post = await _opMessageService.MakeAPost(user, opMessage);
+                var post = await _opMessageService.MakeAPost(username, opMessage);
                 return Ok(post);
+            }
+            catch (ValidationException e)
+            {
+                return BadRequest();
+            }
+        }
+
+        [HttpGet("{id}")]
+        [AllowAnonymous]
+        [ProducesResponseType(StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status400BadRequest)]
+        public async Task<ActionResult<OpMessageModel>> GetOpMessage(int id)
+        {
+            try
+            {
+                return Ok(await _opMessageService.GetById(id));
             }
             catch (ValidationException e)
             {
